--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Frontend Banking</title>
-	<link rel="stylesheet" href="style.css">
+
+	<!-- css & bootstrap -->
+	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+	<!-- angular CDN -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
-	<script src="main.js"></script>
+	
+	<!-- ui-boostrap CDN -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.js"></script>
+	
+	<!-- controller, module, services -->
+	<script src="/js/module.js"></script>
+	<script src="/js/services.js"></script>
+	<script src="/js/controllers.js"></script>
+	
 </head>
 <body ng-app="ledgerApp" ng-controller="mainCtrl">
 	<div class="container">
@@ -24,13 +36,9 @@
 				<label>Amount<input type="number" class="form-control" placeholder="amount" ng-model="newTransaction.amount"></label>
 			</div>		
 			<div class="form-group">
-				<label >Description<input type="text" class="form-control" placeholder="Description" ng-model="newTransaction.description"></label>
-			</div>
-			<div class="form-group">
 				<label>Note<input type="text" class="form-control" placeholder="Notes" ng-model="newTransaction.notes"></label>
 			</div>			
-			<input type="date" ng-model="newTransaction.date">
-			<button class="btn btn-primary" ng-click="pushTransaction()">Enter</button>
+			<button class="btn btn-primary" ng-click="create()">Enter</button>
 		</div>
 
 		<div>
@@ -46,13 +54,10 @@
 				<div class="form-group">
 					<label>Amount<input type="number" class="form-control" placeholder="amount" ng-model="editTransaction.amount"></label>
 				</div>		
-				<div class="form-group">
-					<label >Description<input type="text" class="form-control" placeholder="description" ng-model="editTransaction.description"></label>
-				</div>
+
 				<div class="form-group">
 					<label>Note<input type="text" class="form-control" placeholder="notes" ng-model="editTransaction.notes"></label>
 				</div>			
-				<input type="text" ng-model="editTransaction.date">
 				<button class="btn btn-primary" ng-click="saveEdits(editTransaction)">Save Edit</button>
 			</div>
 
@@ -63,8 +68,7 @@
 
 		<table class="table">
 			<thead>
-				<th ng-click="sortBy('date')" > Date</th>
-				<th ng-click="sortBy('description')" >Description</th>
+				<th ng-click="sortBy('createAt')" > Date</th>
 				<th ng-click="sortBy('notes')" > Notes</th>
 				<th ng-click="sortBy('debit')" > Debits</th>
 				<th ng-click="sortBy('credit')" > Credits</th>
@@ -73,13 +77,13 @@
 			<tbody>
 				<!--   -->
 				<tr ng-repeat="x in transactions | filter:searchText | orderBy: order track by $index">
-					<td> {{ x.date }} </td>
-					<td> {{ x.description }} </td>
+					<td> {{ x.createAt }} </td>
 					<td> {{ x.notes }} </td>
-					<td> {{ x.debit }} </td>
-					<td> {{ x.credit }} </td>
-<!-- 					<td> <button type="button" class="btn btn-warning default" ng-click="getTransactionValues(x)"><span class="glyphicon glyphicon-edit"></span></button> </td> -->
-					<td><button class="btn btn-danger default" data-toggle="modal" data-target="#editModal"><span class="glyphicon glyphicon-edit"></span></button></td>
+					<td> {{ x.amount }} </td>
+					<td> {{ x.amount }} </td>
+
+					<td> <button type="button" class="btn btn-warning default" ng-click="getTransactionValues(x)"><span class="glyphicon glyphicon-edit"></span></button> </td>
+
 					<td> <button class="btn btn-danger default" ng-click="delete(x)"><span class="glyphicon glyphicon-remove-sign"></span></button> </td>
 				</tr>
 
